[package]
name = "rutt"
version = "0.1.0"
authors = ["Kim Sevandersson <ksevandersson@gmail.com>"]
edition = "2018"
description = "Graph oblivious path search"
license = "Apache-2.0"
keywords = ["gamedev", "robotics", "A*", "D*", "D* Lite", "D* Extra Lite", "pathfinding", "shortest path"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["demo/find"]

[dependencies]
fxhash = "0.2.1"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "astar"
harness = false